--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,11 @@
 .env.development.local
 .env.test.local
 .env.production.local
-/.idea
+
+# User-specific stuff:
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/dictionaries
 
 npm-debug.log*
 yarn-debug.log*
