--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
-# User-specific stuff:
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/dictionaries
+.idea
 
 npm-debug.log*
 yarn-debug.log*
